ログイン機能の修正